# rag-project

./: .gitignore  README.md  main.py  pyproject.toml
datasets/selected/: legalbench.json  summaries.json
src/: body_models.py  documents.py  llm.py  llm_config.py  models.py  utils.py
static/: chat.js  index.css
templates/: base.jinja  chats.jinja  home.jinja  login.jinja  main.jinja  profile.jinja
templates/icons/: chats-icon.jinja  plus-icon.jinja  user-icon.jinja
test/: llm_test.py  test.py  test_legalbench.py
