[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "djlint>=1.36.4",
    "docling-core[chunking]>=2.55.0",
    "docling[asr,rapidocr]>=2.64.1",
    "faiss-cpu>=1.13.1",
    "fastapi[standard]>=0.124.0",
    "flashrank>=0.2.10",
    "gpt4all>=2.8.2",
    "huggingface-hub[hf-xet]>=0.36.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.1.0",
    "langchain-mistralai>=1.1.1",
    "langchain-text-splitters>=1.0.0",
    "pip>=25.3",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "python-ulid>=3.1.0",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "spacy>=3.8.11",
    "sqlmodel>=0.0.27",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
